# Veriflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  README_EN.md  REFACTOR_SUMMARY.md  SKILL.md  SKILL.md.bak-v5.0  STAGE3_PARALLEL.md  readme_first.md  request.md  run_veriflow.bat  run_veriflow.py  run_veriflow.sh  setup_git.sh  veriflow_ctl.py  veriflow_gui.py  veriflow_orchestrator.py
example_project/: 01_define_spec.py  02_generate_rtl.py  03_run_simulation.py  04_run_synthesis.py  README.md  requirements.json  run_all.py
prompts/: stage0_init.md  stage1_architect.md  stage1_spec.md  stage1_spec_quick.md  stage2_timing.md  stage35_skill_d.md  stage3_codegen.md  stage3_coder.md  stage3_module.md  stage4_sim.md  stage5_synth.md  stage6_close.md  supervisor.md
tools/: run_lint.sh  run_sim.sh
verilog-flow-skill/: SKILL.md
verilog_flow/: QUICKSTART.md  README.md  README_EN.md  TUTORIAL.md  __init__.py  pyproject.toml
verilog_flow/cli/: __init__.py  codegen.py  main.py  simulate.py  synthesize.py
verilog_flow/common/: __init__.py  coding_style.py  execution_log.py  experience_db.py  kpi.py  logger.py  post_run_analyzer.py  project_layout.py  requirement_validator.py  stage_checklists.py  stage_gate.py  toolchain_detect.py
verilog_flow/defaults/: project_templates.json
verilog_flow/defaults/coding_style/generic/: base_style.md  timing_patterns.md
verilog_flow/defaults/coding_style/intel/: intel_style.md
verilog_flow/defaults/coding_style/xilinx/: xilinx_style.md
verilog_flow/defaults/templates/generic/: template_async_fifo.v  template_axi4_lite_slave.v  template_axis_skid_buffer.v  template_cdc_handshake.v  template_cdc_sync_bit.v  template_fsm.v  template_module_empty.v  template_ram_sp.v  template_ram_tdp.v  template_rom.v  template_sync_fifo.v
verilog_flow/examples/: demo_stage2.py  fifo_write_scenario.yaml
verilog_flow/stage1/: __init__.py  arch_decomposer.py  arch_prompts.py  architect.py  design_explorer.py  spec_generator.py  stage15_enhanced.py
verilog_flow/stage1/schemas/: arch_spec_v2.json
verilog_flow/stage2/: __init__.py  assertion_explainer.py  cocotb_gen.py  golden_trace.py  validator.py  wavedrom_gen.py  yaml_dsl.py
verilog_flow/stage3/: __init__.py  code_generator.py  interface_checker.py  lint_checker.py  skill_d.py  skill_d_enhanced.py  template_engine.py  verilator_lint.py
verilog_flow/stage4/: __init__.py  assertion_checker.py  sim_runner.py  testbench.py  unit_test_gen.py  waveform_diff.py  waveform_diff_enhanced.py
verilog_flow/stage5/: __init__.py  area_estimator.py  kpi_comparator.py  precheck.py  synthesis_runner.py  timing_analyzer.py  yosys_interface.py
verilog_flow/verilog_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
